benchmark result for LinearRegression